# nebulastream-espat

./: .gitignore  CMakeLists.txt  latency_results_nebulastream_concat.csv  repl-input.txt  results_nebulastream.csv  statistic_store_benchmark.csv  throughput_results_nebulastream_concat.csv
ResourceAssignment_1773757947_WORK_DEALING_NEW_QUEUE_AND_THREAD_filter/: config.yaml  filter_0.yaml  filter_1.yaml  filter_2.yaml  filter_3.yaml  latency_results_nebulastream.csv  throughput_results_nebulastream.csv
cmake/: UseCCache.cmake
docs/: nebulastream-frontend.md
grpc/: SerializableSchema.proto  SerializableVariantDescriptor.proto  StatisticService.proto
nes-fpga/: CMakeLists.txt
nes-fpga/include/platform/: bspconfig.h  xcoresightpsdcc.h  xdebug.h  xenv.h  xenv_standalone.h  xil_printf.h  xil_types.h  xparameters.h  xpseudo_asm.h  xpseudo_asm_gcc.h
nes-fpga/src/: CMakeLists.txt  main.cpp
nes-fpga/src/platform/: CMakeLists.txt  outbyte.c  xaxidma.c  xcoresightpsdcc.c  xil_printf.c  xuartps_hw.c
nes-fpga/src/platform/axidma/src/: AXIDMAConfig.cmake  xaxidma_g.c
nes-fpga/src/platform/build_configs/exmetadata/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cmake_lib_configs.txt  install_manifest.txt  libxil.mri
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/avbuf/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/axidma/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/axipmon/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/canps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/clockps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/common/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/coresightps_dcc/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/csudma/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/ddrcpsu/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/dpdma/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/dppsu/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/emacps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/gpiops/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/iicps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/ipipsu/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/qspipsu/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/resetps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/rtcpsu/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/scugic/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/sdps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/64bit/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/64bit/gcc/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/64bit/platform/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/64bit/platform/ZynqMP/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/64bit/platform/ZynqMP/gcc/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/includes_ps/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/includes_ps/platform/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/ARMv8/includes_ps/platform/ZynqMP/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/common/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/arm/common/gcc/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/common/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/common/clocking/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/standalone/src/common/intr/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/sysmonpsu/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/ttcps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/uartps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/usbpsu/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/video_common/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/wdtps/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/xiltimer/src/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/xiltimer/src/core/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/xiltimer/src/core/default_timer/: cmake_install.cmake
nes-fpga/src/platform/build_configs/gen_bsp/libsrc/zdma/src/: cmake_install.cmake
nes-fpga/src/platform/standalone/src/common/: StandaloneExample.cmake
nes-frontend/: CMakeLists.txt
nes-sinks/: CMakeLists.txt
nes-sinks/include/Sinks/: PrometheusSink.hpp  SinkDescriptor.hpp
nes-sinks/src/: CMakeLists.txt  FileSink.cpp  PrometheusSink.cpp
(+623 files in other folders)
